# trading-wheels

./: .flaskenv  .gitignore  Procfile  README.md  config.py  database.py  main.py  models.py  package.json  portfolio.py  pyproject.toml  requirements.txt  server_tests.py  tokens.py  trades.py  trades_test.py  unittest.py  users.py  views.py
app/: __init__.py  models.py  portfolio.py  stocks.py  trades.py  users.py
back-end/: .flaskenv  LICENSE  README.md  config.py  pyproject.toml  test.py  trading_wheels.py
back-end/app/: __init__.py  base_api_interface.py  fmp_api_interface.py  home.py  iex.py  iex_interface.py  models.py  portfolio.py  stocks.py  trades.py  users.py
back-end/migrations/versions/: 1bbc0705f912_.py  27a231ecfa8c_rebuild_db.py  3e9c634f696e_.py  5129421125e1_create_meta_data_table_remove_date_from_.py  977f5e7c242e_.py  a3eebe8f470d_.py  d3574b8bc75b_.py
back-end/tests/: test_portfolio.py  test_stocks.py  test_trades.py  test_users.py
front-end/: package-lock.json  package.json
front-end/public/: index.html  manifest.json
front-end/src/: App.js  App.test.js  index.js
front-end/src/components/: BoldLink.js  Footer.js  Header.js  InfoBar.js  LoginButton.js  Positions.js  SearchForm.js  SearchResultsTable.js  StockChart.js  StockInfo.js  Summary.js  TradeButton.js  TradeForm.js  TradeModal.js  index.js
front-end/src/pages/: About.js  Home.js  Login.js  Logout.js  NotFound.js  Portfolio.js  Trading.js  index.js
front-end/src/styles/: sandstone_theme.css
migrations/versions/: e8ee34793de6_initial_setup.py
tests/: test_users.py
(+4 files in other folders)
